fix: add another div to collapse to fix display bug

--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -1,16 +1,5 @@
-.collapse-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  max-width: 1000px;
-  margin: 0 auto;
-}
-
-.collapse-content-container {
-  display: flex;
-  justify-content: space-between;
-  gap: 20px;
-  width: 100%;
+.collapse-wrapper {
+  margin-bottom: 20px; // Ensure spacing between collapses
 }
 
 .collapse {
@@ -49,10 +38,10 @@
   &-content {
     max-height: 0;
     overflow: hidden;
-    transition: max-height 0.5s ease;
+    transition: max-height 0.3s ease;
 
     &.open {
-      max-height: 500px; 
+      max-height: 500px;
     }
   }
 
